# ai-attendance-backend

./: README.md  pyproject.toml
backend/src/: main.py
