[tool.poetry]
name = "ha-backend"
version = "0.1.0"
description = "Highly Available Backend Server"
authors = ["Your Name <email@example.com>"]
readme = "README.md"
packages = [{include = "ha_backend", from = "backend/src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.1.0"
tenacity = "^8.2.3"
aiohttp = "^3.9.1"
prometheus-client = "^0.19.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"